style(source-modal): fix spacing

--- a/packages/@ourworldindata/grapher/src/modal/SourcesModal.scss
+++ b/packages/@ourworldindata/grapher/src/modal/SourcesModal.scss
@@ -75,6 +75,7 @@
         .data-processing {
             --data-processing-content: #{$light-text};
 
+            margin-top: 0;
             margin-bottom: 16px;
         }
 
